--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "test": "mocha ./**/*.test.js -t 15000ms"
+    "test": "mocha tests/**/*.test.js"
   },
   "keywords": [],
   "author": "",
